# pdf-cutstack-booklet

./: .gitignore  README.md  gui_main.py  main.py  pyproject.toml  requirements.txt
.github/workflows/: build-release.yml
archive/: original_horizontal.py  original_vertical.py
src/pdf_booklet_app/: __init__.py  cli.py  config.py  core.py  gui_main.py  layouts.py  main_window.py  order.py  utils.py
src/pdf_booklet_app.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/pdf_booklet_app/ui/: main_window.ui
